# Hybrid

./: Readme.md  cleanAll.sh  compileAll.sh  runAll.sh  runAllBW.sh  runCluster.sh
Mpi/: CMakeLists.txt  Readme.md  runNodesTest.sh  runTest.sh  runTestMPI.sh
Mpi+Mpi/: CMakeLists.txt  Readme.md  runNodesTest.sh  runTest.sh  runTestMPI+MPI.sh
Mpi+Mpi/src/: laplace.c  main.c
Mpi+Mpi_fence/: CMakeLists.txt  runTest.sh  runTestBW.sh
Mpi+Mpi_fence/src/: CMakeLists.txt  main.c
Mpi+OpenMP/: CMakeLists.txt  Readme.md  runNodesTest.sh  runTest.sh  runTestBW.sh  runTestMPI+OpenMP.sh
Mpi+OpenMP/src/: laplace.c  main.c
Mpi+openMP/: runTestMPI+openMP.sh
Mpi+openMP/src/: CMakeLists.txt  main.c
Mpi+openMP/src/include/: dataDef.h
Mpi/src/: CMakeLists.txt  main.c
OpenMP/: CMakeLists.txt  compileAll.sh  runAll.sh  runTestOpenMP.sh
OpenMP/src/: CMakeLists.txt  laplace.c  main.c
plots/: createPlot.sh  createPlotFull.sh  createPlotHybrid.sh  plot.gnp  plotCluster.gnp  plotGnu.gnp  plotGnuRatio.gnp  plotGnuRatioHyb.gnp  plotRatio.gnp  style.gnp
plots/blueWaters/gnu/: laplace.txt  laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt  laplace_MPI+openMP.txt  laplace_MPI.txt
plots/blueWaters/intel/: laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt
plots/blueWaters/pgi/: laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt
plots/dunkel/gnu/: laplace.txt  laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt  laplace_MPI.txt
plots/dunkel/intel/: laplace.txt  laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt  laplace_MPI.txt
plots/dunkel/pgi/: laplace.txt  laplace_MPI+MPI.txt  laplace_MPI+OpenMP.txt  (+2 more)
(+34 files in other folders)
